feature(no-jira): Adding JWT Auth (#2)
* feature(no-jira): Creating USER model and handlers

* feature(no-jira): cleaning code.

* feature(no-jira): upgrading gorm patch version

* feature(no-jira): Adding JWT Auth and creating application_properties.yaml

---------
