# docs/swagger.json
@@ -1,11 +1,78 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "This is a sample server for managing students.",
+        "title": "Students API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:9000",
+    "basePath": "/",
     "paths": {
+        "/": {
+            "get": {
+                "description": "A method to get a greeting",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Greeting"
+                ],
+                "summary": "Greeting",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/login": {
+            "post": {
+                "description": "A method to authentication and get a token",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Login"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "User DTO",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UserDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/students": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "A method to get all students",
                 "consumes": [
                     "application/json"
@@ -27,6 +94,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "A method to create a student",
                 "consumes": [
                     "application/json"
@@ -61,6 +133,11 @@
         },
         "/students/fiscal_number/{fiscalNumber}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "A method to get a student by Fiscal Number",
                 "consumes": [
                     "application/json"
@@ -93,6 +170,11 @@
         },
         "/students/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "A method to get a student by ID",
                 "consumes": [
                     "application/json"
@@ -123,6 +205,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "A method to update a student",
                 "consumes": [
                     "application/json"
@@ -162,6 +249,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "A method to delete a student",
                 "consumes": [
                     "application/json"
@@ -189,6 +281,11 @@
                 }
             },
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "A method to edit a student",
                 "consumes": [
                     "application/json"
@@ -245,6 +342,26 @@
                     "type": "string"
                 }
             }
+        },
+        "models.UserDTO": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "maxLength": 255
+                },
+                "username": {
+                    "type": "string",
+                    "maxLength": 255
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
