# middleware/jwt_middleware.go
@@ -1,0 +1,50 @@
+package middleware
+
+import (
+	"api-go-gin/util"
+	"github.com/gin-gonic/gin"
+	"net/http"
+	"strings"
+)
+
+func JWTAuthMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		authHeader := c.GetHeader("Authorization")
+		if authHeader == "" {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Authorization header is missing"})
+			c.Abort()
+			return
+		}
+
+		if !strings.HasPrefix(authHeader, "Bearer ") {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid Authorization header format"})
+			c.Abort()
+			return
+		}
+
+		tokenString := strings.TrimPrefix(authHeader, "Bearer ")
+
+		token, err := util.VerifyToken(tokenString)
+
+		if err != nil {
+
+			if err.Error() == "EXPIRED_TOKEN" {
+				c.JSON(http.StatusUnauthorized, gin.H{"error": "Expired token"})
+				c.Abort()
+				return
+			}
+
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+			c.Abort()
+			return
+		}
+
+		if !token.Valid {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+			c.Abort()
+			return
+		}
+
+		c.Next()
+	}
+}
